--- a/CodingPractice/CodingPractice.vcxproj
+++ b/CodingPractice/CodingPractice.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="opt1\List.h" />
     <ClInclude Include="opt1\Opt1.h" />
+    <ClInclude Include="opt1\Unordered_Set.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
