Did some more work on Hashtable.h and renamed a function in List.h to match with naming convention.

--- a/CodingPractice/CodingPractice.vcxproj
+++ b/CodingPractice/CodingPractice.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="opt1\Opt1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="opt1\Hashtable.h" />
     <ClInclude Include="opt1\List.h" />
     <ClInclude Include="opt1\Opt1.h" />
     <ClInclude Include="opt1\Unordered_Set.h" />
