Starting Opt2 and adding freeglut to project.

--- a/CodingPractice/CodingPractice.vcxproj
+++ b/CodingPractice/CodingPractice.vcxproj
@@ -89,6 +89,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Stuff\Git_Repo\CodingPractice\external\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -149,12 +150,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="opt1\Opt1.cpp" />
+    <ClCompile Include="opt2\Opt2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opt1\Hashtable.h" />
     <ClInclude Include="opt1\List.h" />
     <ClInclude Include="opt1\Opt1.h" />
     <ClInclude Include="opt1\Unordered_Set.h" />
+    <ClInclude Include="opt2\Opt2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
