--- a/CodingPractice/CodingPractice.vcxproj.filters
+++ b/CodingPractice/CodingPractice.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="opt1\Opt1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="opt2\Opt2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opt1\List.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="opt1\Hashtable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="opt2\Opt2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
