--- a/CodingPractice/CodingPractice.vcxproj.filters
+++ b/CodingPractice/CodingPractice.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="opt2\GL1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="opt2\GL2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opt1\List.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="opt2\GL1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="opt2\GL2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
