--- a/CodingPractice/CodingPractice.vcxproj.filters
+++ b/CodingPractice/CodingPractice.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="opt2\GL2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="opt2\GLinclude.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
