--- a/CodingPractice/CodingPractice.vcxproj.filters
+++ b/CodingPractice/CodingPractice.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="opt2\GL3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="opt3\Opt3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="opt3\Postfix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opt1\List.h">
@@ -60,6 +66,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="opt2\GL3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="opt3\Opt3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="opt3\Postfix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
