--- a/CodingPractice/CodingPractice.vcxproj
+++ b/CodingPractice/CodingPractice.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="opt2\Opt2.cpp" />
     <ClCompile Include="opt3\Opt3.cpp" />
     <ClCompile Include="opt3\Postfix.cpp" />
+    <ClCompile Include="opt3\Sudoku.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opt1\Hashtable.h" />
@@ -174,6 +175,7 @@
     <ClInclude Include="opt2\Opt2.h" />
     <ClInclude Include="opt3\Opt3.h" />
     <ClInclude Include="opt3\Postfix.h" />
+    <ClInclude Include="opt3\Sudoku.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
